--- a/ytmp3.html
+++ b/ytmp3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Seraphiel Spark | Audio Converter</title>
+    <title> Omni's YTMP3 Downloader | YT Audio Converter</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;700&family=Plus+Jakarta+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -500,4 +500,5 @@
         });
     </script>
 </body>
+
 </html>
