--- a/ytmp3.html
+++ b/ytmp3.html
@@ -348,7 +348,7 @@
 
     <nav>
         <div class="logo">
-            <i class="fa-solid fa-bolt" style="color:var(--primary)"></i> Seraphiel<span>Spark</span>
+            <i class="fa-solid fa-bolt" style="color:var(--primary)"></i> Omni's <span>YTMP3 Downloader</span>
         </div>
         <div class="nav-links">
             <a href="#features">Features</a>
@@ -413,7 +413,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 Seraphiel Spark. Built for Creators.</p>
+        <p>&copy; 2026 Omni's YTMP3 Downloader. Built for Creators.</p>
     </footer>
 
     <script>
@@ -466,7 +466,7 @@
                 resultCard.classList.add('active');
 
             } catch (error) {
-                showError("Could not convert video. Please check the link.");
+                showError("Could not convert video. Please check the link. | Contact Developer");
             } finally {
                 setLoading(false);
             }
@@ -502,3 +502,4 @@
 </body>
 
 </html>
+
