--- a/ai.html
+++ b/ai.html
@@ -422,11 +422,11 @@
             <button onclick="toggleChat()" class="opacity-70 hover:opacity-100"><i class="fas fa-times"></i></button>
         </div>
 
-        <div id="limit-bar">FREE TRIAL CREDITS: 5 / 5</div>
+        <div id="limit-bar">FREE TRIAL CREDITS: 6 / 6</div>
 
         <div id="chat-history" class="flex-grow p-6 overflow-y-auto space-y-4 text-sm bg-gray-950">
             <div class="bg-gray-800 p-4 rounded-2xl rounded-tl-none max-w-[85%] text-gray-200">
-                Happy New Year! 🎉 I am Omni. I help developers and creators scale with AI. 
+                I am Omni. I help developers and creators scale with AI. 
                 What platform can I automate for you today?
             </div>
         </div>
@@ -440,7 +440,7 @@
 
         <div id="limit-overlay">
             <div class="text-red-400 font-bold mb-2">TRIAL LIMIT REACHED</div>
-            <p class="text-xs text-gray-400 mb-4">You have used your 5 free messages. Upgrade now for unlimited AI access.</p>
+            <p class="text-xs text-gray-400 mb-4">You have used your 6 free messages. Upgrade now for unlimited AI access.</p>
             <a href="https://wa.me/2348120505881?text=Hi%20Omni%20sent%20me!%20I%20am%20ready%20to%20start." 
                target="_blank" 
                class="inline-block w-full py-3 bg-green-500 rounded-xl font-bold text-white text-sm hover:bg-green-600 transition">
@@ -557,4 +557,5 @@
     </script>
 </body>
 </html>
+
 
