--- a/ai.html
+++ b/ai.html
@@ -1665,7 +1665,7 @@
             chatHistory.scrollTop = chatHistory.scrollHeight;
             
             try {
-                const response = await fetch('https://loveofn8n.app.n8n.cloud/webhook/omni-chat', {
+                const response = await fetch('https://loveofn8ncloud.app.n8n.cloud/webhook/omni-chat', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ 
@@ -1825,4 +1825,5 @@
     </script>
 </body>
 </html>
+
 
